--- a/DTS.Web/appsettings.json
+++ b/DTS.Web/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "defaultConnection": "Server=DESKTOP-HNTSA6S\\SQLEXPRESS;Database=dts;User Id=eatmars;Password=ispassword;TrustServerCertificate=True;"
+    "defaultConnection": "Server=DESKTOP-Q4CM468\\SQLEXPRESS;Database=dts;User Id=eatmars;Password=ispassword;TrustServerCertificate=True;"
   }
 }
